# decentchat

./: CMakeLists.txt
include/dchat/: dchat.h
include/decentchat/: chat.h
src/: api.c  conn.c  conn.h  list.h  map.h  port.c  port.h  server.c  server.h  session.c  session.h
test/: CMakeLists.txt  fixture.hpp  portdup.c  portinit.c  server_create.c  server_create_dup.c  server_create_dup_session.c  server_create_mult.c  serverdestroyearly.c  serverinit.c  servertest.cpp  session_create.c  session_create_mult.c  session_destroy.c  test.h
